# seqdb

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  TODO.md  update.sh
compressed/: data
compressed/regions/: id_to_index  index_to_region
crates/rawdb/: Cargo.toml  README.md
crates/rawdb/examples/: db.rs
crates/rawdb/src/: error.rs  layout.rs  lib.rs  reader.rs  region.rs  regions.rs
crates/rawdb/tests/: mod.rs
crates/seqdb/: Cargo.toml  README.md  build.rs
crates/seqdb/examples/: db.rs  seqdb.rs
crates/seqdb/src/: error.rs  identifier.rs  layout.rs  lib.rs  reader.rs  region.rs  regions.rs
crates/seqdb/tests/: mod.rs
crates/seqdb/vecs/: data
crates/seqdb/vecs/regions/: index_to_region
crates/vecdb/: .gitignore  Cargo.toml  README.md  build.rs
crates/vecdb/examples/: compressed.rs  integrity.rs  raw.rs  rollback.rs
crates/vecdb/src/: error.rs  exit.rs  lib.rs  lookback.rs  stamp.rs  version.rs
crates/vecdb/src/iterators/: boxed.rs  enumerated.rs  extended.rs  iterable.rs  mod.rs  typed.rs  writer.rs
crates/vecdb/src/traits/: any.rs  collectable.rs  compressable.rs  compressed.rs  formattable.rs  from_coarser.rs  generic.rs  index.rs  iterable.rs  iterator.rs  mod.rs  printable.rs  raw.rs  stored.rs  typed.rs  value.rs  writable.rs
crates/vecdb/src/variants/: eager.rs  mod.rs
crates/vecdb/src/variants/compressed/: mod.rs  page.rs  pages.rs
crates/vecdb/src/variants/compressed/iterators/: clean.rs  dirty.rs  mod.rs
crates/vecdb/src/variants/computed/: computation.rs  iterator.rs  mod.rs
crates/vecdb/src/variants/eager/: checked_sub.rs  mod.rs  saturating_add.rs
crates/vecdb/src/variants/lazy/: lazy1.rs  lazy2.rs  lazy3.rs  mod.rs
crates/vecdb/src/variants/lazy/from1/: iterator.rs  mod.rs
crates/vecdb/src/variants/lazy/from2/: iterator.rs  mod.rs
crates/vecdb/src/variants/lazy/from3/: iterator.rs  mod.rs
crates/vecdb/src/variants/raw/: header.rs  mod.rs  options.rs
crates/vecdb/src/variants/raw/iterators/: clean.rs  dirty.rs  mod.rs
crates/vecdb/src/variants/stamped/: mod.rs
crates/vecdb/src/variants/stored/: format.rs  iterator.rs  mod.rs
crates/vecdb/tests/: compressed.rs  integrity.rs  mmap_file_consistency.rs  raw.rs  rollback.rs
crates/vecdb_bench/: .gitignore  Cargo.toml  README.md
crates/vecdb_bench/src/: database.rs  fjall2_impl.rs  fjall3_impl.rs  lib.rs  lmdb_impl.rs  main.rs  redb_impl.rs  rocksdb_impl.rs  runner.rs  vecdb_compressed_impl.rs  vecdb_impl.rs  vecdb_old_impl.rs  vecdb_raw_impl.rs  vecdb_raw_old_impl.rs
crates/vecdb_derive/: Cargo.toml  README.md
crates/vecdb_derive/src/: lib.rs
docs/: CHANGELOG.md  LICENSE.md  README.md  TODO.md
scripts/: release.sh
