[workspace]
resolver = "3"
members = ["crates/*"]
package.license = "MIT"
package.edition = "2024"
package.version = "0.2.16"
package.homepage = "https://github.com/seqdb/seqdb"
package.repository = "https://github.com/seqdb/seqdb"
package.readme = "README.md"
package.keywords = ["vec", "disk", "data"]
package.categories = ["database"]
package.rust-version = "1.89"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[profile.dist]
inherits = "release"

[profile.clippy]
inherits = "dev"

[workspace.dependencies]
allocative = { version = "0.3.4", features = ["parking_lot"] }
allocative_derive = "0.3.3"
log = "0.4.28"
parking_lot = "0.12.5"
rayon = "1.11.0"
seqdb = { version = "0.2.16", path = "crates/seqdb" }
vecdb = { version = "0.2.16", path = "crates/vecdb" }
vecdb_derive = { version = "0.2.16", path = "crates/vecdb_derive" }
zerocopy = { version = "0.8.27", features = ["zerocopy-derive"] }

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"
pre-release-commit-message = "release: v{{version}}"
tag-message = "release: v{{version}}"
