[package]
name = "rawdb"
description = "Single-file, low-level and space efficient storage engine with filesystem-like API"
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
allocative = { workspace = true }
libc = "0.2.177"
memmap2 = "0.9.9"
parking_lot = { workspace = true }
rayon = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[package.metadata.docs.rs]
all-features = true
