[package]
name = "seqdb"
description = "A K.I.S.S. sequential storage engine"
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
libc = "0.2.175"
log = { workspace = true }
memmap2 = "0.9.7"
parking_lot = { workspace = true }
rayon = { workspace = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

[package.metadata.docs.rs]
all-features = true
