[package]
name = "seqdb"
description = "A K.I.S.S. sequential storage engine"
keywords.workspace = true
categories.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true
build = "build.rs"

[dependencies]
allocative = { workspace = true }
libc = "0.2.177"
log = { workspace = true }
parking_lot = { workspace = true }
rayon = { workspace = true }
zerocopy = { workspace = true }

[package.metadata.docs.rs]
all-features = true

[package.metadata.cargo-machete]
ignored = ["log"]
