[package]
name = "vecdb"
description = "A K.I.S.S. index-value storage engine"
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
# full = [
#     "derive",
# ]
derive = ["vecdb_derive"]

[dependencies]
allocative = { version = "0.3.4", features = ["parking_lot"] }
ctrlc = { version = "3.5.0", features = ["termination"] }
log = { workspace = true }
parking_lot = { workspace = true }
pco = "0.4.6"
seqdb = { workspace = true }
serde = "1.0.219"
serde_derive = "1.0.219"
serde_json = { version = "1.0.143", features = ["float_roundtrip"] }
vecdb_derive = { workspace = true, optional = true }
zerocopy = { workspace = true }
zerocopy-derive = { workspace = true }

[package.metadata.docs.rs]
all-features = true
