[package]
name = "vecdb"
description = "High-performance mutable persistent vectors built on rawdb"
keywords.workspace = true
categories.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
build = "build.rs"

[features]
derive = ["vecdb_derive"]

[dependencies]
ctrlc = { version = "3.5.1", features = ["termination"] }
log = { workspace = true }
parking_lot = { workspace = true }
pco = "0.4.7"
rawdb = { workspace = true }
serde = "1.0.228"
serde_derive = "1.0.228"
sonic-rs = "0.5.6"
vecdb_derive = { workspace = true, optional = true }
zerocopy = { workspace = true }

[dev-dependencies]
sha2 = "0.10"
tempfile = { workspace = true }
walkdir = "2.5"

[package.metadata.docs.rs]
all-features = true
