[package]
name = "vecdb_bench"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "vecdb_bench"
path = "src/main.rs"

[dependencies]
vecdb = { workspace = true }
seqdb = { workspace = true }

# Database implementations
fjall2 = { version = "2.11.2", package = "fjall" }
fjall3 = { version = "3.0.0-pre.2", package = "fjall" }
redb = "3.1.0"
heed = "0.22.0"

# Utilities
rand = "0.9.2"
anyhow = "1.0"
walkdir = "2.5"
byteorder = "1.5"
