[package]
name = "vecdb_bench"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "vecdb_bench"
path = "src/main.rs"

[dependencies]
fjall2 = { version = "2.11.2", package = "fjall" }
fjall3 = { version = "3.0.0-pre.3", package = "fjall" }
heed = "0.22.0"
redb = "3.1.0"
rocksdb = "0.24"
vecdb = { workspace = true }
vecdb_old = { version = "0.2.17", package = "vecdb" }

# Utilities
rand = "0.9.2"
rayon = "1.11"
anyhow = "1.0"
walkdir = "2.5"
byteorder = "1.5"
